app.yml
AWSTemplateFormatVersion: "2010-09-09"
Description: |
  CloudFormation Template for Roman Numerals Converter Application.
  This template creates Python Flask Web Application on Amazon Linux 2 AMI
  (latest-ami) EC2 Instance with custom security group
  allowing http connections on port 80 and SSH connection on port 22.
  Roman Numerals Converter Application is downloaded from Github
  repository, then installed on Flask.

Parameters:
     KeyName:
      Description: Enter the name of your KeyPair.
      Type: AWS::EC2::KeyPair::KeyName
     LatestAmiId:
      Type: 'AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>'
      Default: '/aws/service/ami-amazon-linux-latest/amzn2-ami-hvm-x86_64-gp2'

Resources:

  WebSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Enable 22, 80.
      SecurityGroupIngress:
        - IpProtocol: tcp  # Required
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp  # Required
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0

  EC2Instance:
    Type: AWS::EC2::Instance
    Properties:
      KeyName: !Ref KeyName
      ImageId: !Ref LatestAmiId
      InstanceType: t2.micro
      SecurityGroupIds:
        - !Ref WebSecurityGroup
      Tags:
        - Key: Name
          Value: !Sub Web Server of ${AWS::StackName}

         
      UserData: !Base64 |
        #!/bin/bash
        yum update -y
        yum install python3 -y
        FOLDER="https://raw.githubusercontent.com/baaserosman/Roman_Numerals_Converter/main/"
        cd /home/ec2-user
        python3 -m venv env
        source env/bin/activate
        wget ${FOLDER}/app.py
        mkdir templates && cd templates
        wget ${FOLDER}/templates/index.html
        wget ${FOLDER}/templates/result.html
        cd ..
        pip install flask
        python app.py

Outputs:

  InstancePrivateIp:
    Value: !Sub
     - Private Ip of EC2 is ${EC2PrivateIp}
     - EC2PrivateIp: !GetAtt EC2Instance.PrivateIp

  WebSiteDNSLink:
    Value: !Sub
      - http://${PublicAddress}
      - PublicAddress: !GetAtt EC2Instance.PublicDnsName
    Description: Application link.
